--- a/pokemon-app/src/PokemonList.css
+++ b/pokemon-app/src/PokemonList.css
@@ -1,3 +1,20 @@
 td {
+    display: table-row;
+    margin: 20px 20px;
+    text-align: center;
     text-transform: capitalize;
+
+    border: 1px solid black;
+}
+
+table, td {
+    margin: 0 auto;
+    border: 1px solid black;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+    line-height: 50px;
+    margin: 20px;
 }
