--- a/pokemon-app/src/PokemonList.css
+++ b/pokemon-app/src/PokemonList.css
@@ -1,15 +1,18 @@
-td {
-    display: table-row;
+.wrapper {
+    display: grid;
     margin: 20px 20px;
     text-align: center;
     text-transform: capitalize;
 
-    border: 1px solid black;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: minmax(100px, auto);
+    column-gap: 10px;
+    row-gap: 1em;
 }
 
-table, td {
-    margin: 0 auto;
+.wrapper div {
     border: 1px solid black;
+    border-radius: 5px;
 }
 
 a {
