--- a/pokemon-app/src/components/PokemonList.css
+++ b/pokemon-app/src/components/PokemonList.css
@@ -2,7 +2,6 @@
     display: grid;
     margin: 20px 20px;
     text-align: center;
-    text-transform: capitalize;
 
     grid-template-columns: 1fr 1fr 1fr;
     grid-auto-rows: minmax(100px, auto);
@@ -13,6 +12,17 @@
 .wrapper div {
     border: 1px solid black;
     border-radius: 5px;
+}
+
+.wrapper span {
+    float: left;
+    margin: 0.7em;
+    font-size: 1.2rem;
+}
+
+.pokemonName {
+    font-size: 1rem;
+    font-weight: bold;
 }
 
 a {
