--- a/pokemon-app/src/components/PokemonList.css
+++ b/pokemon-app/src/components/PokemonList.css
@@ -30,4 +30,10 @@ a {
     color: black;
     line-height: 50px;
     margin: 20px;
+    font-size: 3rem;
+}
+
+img {
+    height: 100px;
+    object-fit: cover;
 }
