--- a/pokemon-app/src/components/PokemonList.css
+++ b/pokemon-app/src/components/PokemonList.css
@@ -1,39 +1,74 @@
+* {
+    width: 90%;
+    margin: 0 auto;
+}
+
 .wrapper {
     display: grid;
-    margin: 20px 20px;
-    text-align: center;
 
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-auto-rows: minmax(100px, auto);
-    column-gap: 10px;
-    row-gap: 1em;
+    column-gap: 2rem;
+    row-gap: 2rem;
 }
 
 .wrapper div {
+    display: flex;
+    flex-wrap: wrap;
     border: 1px solid black;
     border-radius: 5px;
 }
 
 .wrapper span {
-    float: left;
-    margin: 0.7em;
     font-size: 1.2rem;
+    float: left;
+    margin: 0.5em;
 }
 
 .pokemonName {
     font-size: 1rem;
     font-weight: bold;
+    margin: 0 auto;
+    text-align: center;
 }
 
 a {
     text-decoration: none;
     color: black;
-    line-height: 50px;
+
     margin: 20px;
     font-size: 3rem;
 }
 
 img {
-    height: 100px;
-    object-fit: cover;
+    object-fit: contain;
+    margin: auto 10px;
+    height: 250px;
+}
+
+@media screen and (max-width: 600px) {
+    .wrapper {
+        grid-template-columns: 1fr;
+        row-gap: 1rem;
+    }
+
+    img {
+        height: 70%;
+    }
+
+    .pokemonName {
+        line-height: 1.7rem;
+    }
+}
+
+@media (min-width: 600px) and (max-width: 800px) {
+    .wrapper {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (min-width: 800px) and (max-width: 1200px) {
+    .wrapper {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
 }
