--- a/pokemon-app/src/components/PokemonList.css
+++ b/pokemon-app/src/components/PokemonList.css
@@ -1,6 +1,6 @@
 * {
     width: 90%;
-    margin: 0 auto;
+    margin: auto;
 }
 
 .wrapper {
@@ -8,8 +8,8 @@
 
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-auto-rows: minmax(100px, auto);
-    column-gap: 2rem;
-    row-gap: 2rem;
+    column-gap: 1rem;
+    row-gap: 1rem;
 }
 
 .wrapper div {
@@ -20,40 +20,49 @@
 }
 
 .wrapper span {
-    font-size: 1.2rem;
-    float: left;
-    margin: 0.5em;
+    font-size: 1rem;
+    margin: 0.5rem;
+    padding: 0.5rem;
+    text-align: center;
+    border: 1px solid red;
+    background-color: rgba(0, 0, 0, 0.1);
+
+    border-radius: 5px;
+    line-height: 1rem;
+}
+
+.pokeNameBox {
+    background-color: rgba(0, 0, 0, 0.1);
+	border-radius: 10px;
 }
 
 .pokemonName {
-    font-size: 1rem;
     font-weight: bold;
-    margin: 0 auto;
+    margin-left: 5%;
     text-align: center;
+    letter-spacing: 1px;
 }
 
 a {
     text-decoration: none;
     color: black;
 
-    margin: 20px;
-    font-size: 3rem;
 }
 
 img {
     object-fit: contain;
-    margin: auto 10px;
-    height: 250px;
+    padding: 10px;
+    height: 200px;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 580px) {
     .wrapper {
         grid-template-columns: 1fr;
         row-gap: 1rem;
     }
 
     img {
-        height: 70%;
+        height: 200px;
     }
 
     .pokemonName {
@@ -61,18 +70,32 @@ img {
     }
 }
 
-@media (min-width: 600px) and (max-width: 800px) {
+@media (min-width: 581px) and (max-width: 800px) {
     .wrapper {
         grid-template-columns: 1fr 1fr;
+        height: auto;
+    }
+
+    .wrapper span {
+        padding: 0.5rem;
+        margin: 0.5rem;
+        height: 1rem;
+    }
+
+    .pokemonBox {
+        height: 300px;
     }
 }
 
 @media (min-width: 800px) and (max-width: 1200px) {
     .wrapper {
         grid-template-columns: 1fr 1fr 1fr;
+
     }
 
-    .wrapper div {
-       height: 200px;
+    .wrapper span {
+        padding: 0.5rem;
+        margin: 0.5rem;
+        height: 1rem;
     }
 }
