--- a/pokemon-app/src/components/Navbar.css
+++ b/pokemon-app/src/components/Navbar.css
@@ -1,10 +1,30 @@
 nav {
-    width: 100%;
+    display: flex;
     height: 50px;
+    width: 100%;
+    margin: 0;
 }
 
-h1{
+.title{
+    width: 50%;
+    margin: auto;
     font-size: 2.5rem;
     font-weight: bold;
-    text-align: center;
+    justify-content: flex-start;
+}
+
+.navSearch {
+    width: 50%;
+    margin: 0;
+    text-align: right;
+}
+
+input {
+    justify-content: flex-end;
+    width: 170px;
+    height: 30px;
+    border-radius: 50px;
+    font-size: 1rem;
+    padding-left: 10px;
+    margin-top: 5px;
 }
