--- a/pokemon-app/src/components/PokemonList.css
+++ b/pokemon-app/src/components/PokemonList.css
@@ -1,11 +1,7 @@
-* {
-    width: 90%;
-    margin: auto;
-}
-
 .wrapper {
     display: grid;
-
+    margin: 0 auto;
+    width: 90%;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-auto-rows: minmax(100px, auto);
     column-gap: 1rem;
@@ -16,18 +12,23 @@
     display: flex;
     flex-wrap: wrap;
     border: 1px solid black;
-    border-radius: 5px;
+    border-radius: 15px;
+    width: 300px;
+    margin: auto;
+}
+
+.wrapper > div {
+    width: 250px;
 }
 
 .wrapper span {
     font-size: 1rem;
-    margin: 0.5rem;
-    padding: 0.5rem;
+    margin: 1rem auto;
+    padding: 0.5rem 1rem;
     text-align: center;
-    border: 1px solid red;
+    border: 1px solid rgb(102, 102, 102);
     background-color: rgba(0, 0, 0, 0.1);
-
-    border-radius: 5px;
+    border-radius: 30px;
     line-height: 1rem;
 }
 
@@ -52,6 +53,7 @@ a {
 img {
     object-fit: contain;
     padding: 10px;
+    margin: auto;
     height: 200px;
 }
 
@@ -63,6 +65,7 @@ img {
 
     img {
         height: 200px;
+        max-width: 230px;
     }
 
     .pokemonName {
