--- a/pokemon-app/src/components/PokemonList.css
+++ b/pokemon-app/src/components/PokemonList.css
@@ -19,6 +19,8 @@
 
 .wrapper > div {
     width: 250px;
+    background-color: white;
+    margin-top: 15px;
 }
 
 .wrapper span {
@@ -52,7 +54,7 @@ a {
 
 img {
     object-fit: contain;
-    padding: 10px;
+    padding-bottom: 20px;
     margin: auto;
     height: 200px;
 }
