--- a/pokemon-app/src/App.css
+++ b/pokemon-app/src/App.css
@@ -1,3 +1,11 @@
 * {
     font-family: 'Source Sans Pro', sans-serif;
 }
+
+body {
+    margin: 0;
+}
+
+.content {
+    background-color: #dd2120;
+}
