--- a/pokemon-app/src/components/Navbar.css
+++ b/pokemon-app/src/components/Navbar.css
@@ -1,13 +1,19 @@
-nav {
+.navigation {
     display: flex;
-    height: 50px;
+    height: 70px;
     width: 100%;
-    margin: 0;
+    background-color: #2a2a28;
 }
 
 .title{
+    color: #ffcb05;
+    font-weight: 400;
+    font-family: 'Pokemon Solid', sans-serif;
+    text-shadow: -2px -2px 0 #3466af, 2px -2px 0 #3466af, -2px 2px 0 #3466af, 2px 2px 0 #3466af;
     width: 50%;
-    margin: auto;
+    margin-top: 10px;
+    margin-left: 15px;
+    line-height: normal;
     font-size: 2.5rem;
     font-weight: bold;
     justify-content: flex-start;
@@ -15,7 +21,6 @@ nav {
 
 .navSearch {
     width: 50%;
-    margin: 0;
     text-align: right;
 }
 
@@ -26,5 +31,6 @@ input {
     border-radius: 50px;
     font-size: 1rem;
     padding-left: 10px;
-    margin-top: 5px;
+    margin-top: 20px;
+    margin-right: 15px;
 }
