--- a/pokemon-app/src/components/Pagination.css
+++ b/pokemon-app/src/components/Pagination.css
@@ -1,5 +1,5 @@
 .pagination {
-    height: 50px;
+    height: 75px;
     text-align: center;
 }
 
@@ -9,9 +9,8 @@ button {
     border-radius: 4px;
     color: #333;
     cursor: pointer;
-    font-size: 12px;
+    font-size: 1rem;
     font-weight: bold;
-    margin: 0;
     padding: 5px 10px;
     text-align: center;
     text-decoration: none;
