--- a/pokemon-app/src/components/AllPokemon.css
+++ b/pokemon-app/src/components/AllPokemon.css
@@ -1,11 +1,6 @@
 .wrapper {
-    display: grid;
     margin: 0 auto;
     width: 90%;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-auto-rows: minmax(100px, auto);
-    column-gap: 1rem;
-    row-gap: 1rem;
 }
 
 .wrapper div {
@@ -34,11 +29,6 @@
     line-height: 1rem;
 }
 
-.pokeNameBox {
-    background-color: rgba(0, 0, 0, 0.1);
-	border-radius: 10px;
-}
-
 .pokemonName {
     font-weight: bold;
     padding-right: 7px;
@@ -46,10 +36,6 @@
     text-align: center;
     letter-spacing: 1px;
     margin-top: 5px;
-    cursor: pointer;
-}
-
-.pokemonIdentifier {
     cursor: pointer;
 }
 
@@ -63,7 +49,10 @@ img {
     max-width: 230px;
 }
 
-
+a {
+    text-decoration: none;
+    color: black;
+}
 
 @media screen and (max-width: 400px) {
     *{
@@ -72,10 +61,6 @@ img {
 }
 
 @media (min-width: 400px) and (max-width: 580px) {
-    .wrapper {
-        grid-template-columns: 1fr;
-        row-gap: 1rem;
-    }
 
     img {
         height: 200px;
