--- a/pokemon-app/src/components/AllPokemon.css
+++ b/pokemon-app/src/components/AllPokemon.css
@@ -49,9 +49,33 @@ img {
     max-width: 230px;
 }
 
+button {
+    background-color: #f5f5f5;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    color: #333;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: bold;
+    padding: 5px 10px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 0.2s ease-in-out;
+
+    width: 100px;
+    padding: 0.5rem;
+    margin: 1rem;
+}
+
 a {
     text-decoration: none;
     color: black;
+}
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
 }
 
 @media screen and (max-width: 320px) {
