--- a/pokemon-app/src/components/AllPokemon.css
+++ b/pokemon-app/src/components/AllPokemon.css
@@ -67,9 +67,14 @@ button {
     margin: 1rem;
 }
 
+span {
+    display: flex;
+}
+
 a {
     text-decoration: none;
     color: black;
+    cursor: pointer;
 }
 
 .pagination {
