--- a/pokemon-app/src/components/PokemonDetails.css
+++ b/pokemon-app/src/components/PokemonDetails.css
@@ -3,18 +3,43 @@
     height: 100%;
     background-color: #f5f5f5;
     margin: 2% auto;
-
+    border: 1px solid rgba(26, 25, 25, 0.548);
 }
 
 .identify {
+    padding: 5px;
     height: 50px;
-    background-color: #b6b6b6a8;
+    background-color: #cacacaa2;
     border-bottom: 1px solid rgba(128, 128, 128, 0.548);
 }
 
 .pokeIndex{
     font-size: 2rem;
-    padding: 0.3rem;
+    padding-left: 10px;
+    font-weight: 400;
+    width: 400px;
 }
 
+span {
+    display: flex;
+    justify-content: center;
+    padding: 0.2rem;
+    margin: 0.2rem;
+    width: 4rem;
+    border-radius: 50px;
+    border: 1px solid rgba(95, 95, 95, 0.548)
+}
+
+.pokeName {
+    display: inline-block;
+    border: none;
+    font-weight: 800;
+}
+
+.types {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    height: 50px;
+}
 
