--- a/pokemon-app/src/components/PokemonDetails.css
+++ b/pokemon-app/src/components/PokemonDetails.css
@@ -1,10 +1,40 @@
 main {
-    display: inline-flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-gap: 1rem;
     background-color: white;
     width: 95%;
     margin: 2%;
     border-radius: 15px;
 }
 
+.pokeImg {
+    width: 50%;
+    margin: 6% auto;
+}
+
+.pokeData {
+    width: 45%;
+    height: auto;
+    margin: 6%;
+}
+
+.pokeInfo {
+    padding-left: 5%;
+}
+
+.pokeTraining {
+    width: 45%;
+    height: auto;
+}
+
+.pokeBreeding{
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
+.pokeStats {
+    height: 275px;
+    padding-left: 5%;
+}
