--- a/pokemon-app/src/components/PokemonDetails.css
+++ b/pokemon-app/src/components/PokemonDetails.css
@@ -32,7 +32,7 @@ main {
 }
 
 .pokeStats {
-    height: 275px;
+    height: 285px;
     padding-left: 5%;
 }
 
@@ -62,3 +62,43 @@ h3 {
     font-weight: 600;
     margin-top: 20px;
 }
+
+.horizontal .progress-bar {
+    float: left;
+    height: 45px;
+    width: 100%;
+    padding: 12px 0;
+  }
+  
+  .horizontal .progress-fill {
+    position: relative;
+    background: rgb(223, 108, 0);
+    border-radius: 20px;
+    padding-left: 5px;
+    height: 20px;
+    color: #fff;
+    text-align: center;
+    font-family: "Lato","Verdana",sans-serif;
+    font-size: 12px;
+    line-height: 20px;
+  }
+
+  .progress-fill-special {
+    position: relative;
+    background: rgb(236, 193, 0);
+    border-radius: 20px;
+    padding-left: 5px;
+    height: 20px;
+    width: 50%;
+    color: #fff;
+    text-align: center;
+    font-family: "Lato","Verdana",sans-serif;
+    font-size: 12px;
+    line-height: 20px;
+  }
+  
+  .rounded .progress-track,
+  .rounded .progress-fill {
+    border-radius: 3px;
+    box-shadow: inset 0 0 5px rgba(0,0,0,.2);
+  }
