--- a/pokemon-app/src/components/Navbar.css
+++ b/pokemon-app/src/components/Navbar.css
@@ -32,5 +32,17 @@ input {
     font-size: 1rem;
     padding-left: 10px;
     margin-top: 18px;
+}
+
+.searchButton {
+    height: 30px;
+    width: 70px;
+    border-radius: 50px;
+    background-color: #ffcb05;
     margin-right: 2%;
+    margin-left: 2%;
+    padding: 0px;
+    font-size: 1rem;
+    color: #2a2a28;
+    vertical-align: middle;
 }
