--- a/pokemon-app/src/components/PokemonDetails.css
+++ b/pokemon-app/src/components/PokemonDetails.css
@@ -2,6 +2,7 @@ main {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
+    grid-auto-rows: auto;
     grid-gap: 1rem;
     background-color: white;
     width: 95%;
