--- a/pokemon-app/src/components/AllPokemon.css
+++ b/pokemon-app/src/components/AllPokemon.css
@@ -91,6 +91,10 @@ a {
     margin-top: 20px;
 }
 
+h4 {
+    text-transform: capitalize;
+}
+
 @media screen and (max-width: 320px) {
     *{
         display:none;
