--- a/src/components/PokemonDetails.css
+++ b/src/components/PokemonDetails.css
@@ -137,3 +137,12 @@ h3 {
     }
 
 }
+
+@media (min-width: 310px) and (max-width:700px) {
+    .pokeInfo{
+        height: 400px;
+    }
+     .pokeBreeding, .pokeTraining{
+        height: 400px;
+     }
+}
