--- a/src/components/PokemonDetails.css
+++ b/src/components/PokemonDetails.css
@@ -129,7 +129,7 @@ h3 {
     }
 
     .pokeInfo {
-        height: 200px;
+        height: 250px;
     }
 
     .pokeBreeding {
@@ -139,10 +139,13 @@ h3 {
 }
 
 @media (min-width: 310px) and (max-width:700px) {
-    .pokeInfo{
-        height: 400px;
+    .pokeData{
+        height: 260px;
     }
-     .pokeBreeding, .pokeTraining{
-        height: 400px;
+     .pokeTraining{
+        height: 250px;
+     }
+     .pokeBreeding{
+        height: 220px;
      }
 }
